# Bunch_Collider

./: .gitignore  README.md  pyproject.toml  setup.py
bunch_collider/: __init__.py  _bunch_density_cpp.cpp  bunch_collider.py  bunch_density.py  measure.py
examples/: animation.py  basic_collision.py  beam_envelope.py  fit_simulation_to_data.py  hourglass_effect.py  vernier_scan.py
