[build-system]
requires = ["setuptools>=64", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "bunch-collider"
version = "0.1.0"
description = "Relativistic particle bunch collision simulation with beam-beam effects"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["particle physics", "accelerator", "luminosity", "beam", "simulation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
examples = ["matplotlib"]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bunch_collider*"]
